@@ -22,6 +22,7 @@ contrib:
 * updated distributed/README.html to indicate that downloading the JINI jars is no longer required, but jdk1.4+ is. Patch by Dan Rollo.
 * Switch from downloading a separate jnlp.jar to using jre/javaws/javaws.jar. (CC-364) Patch by Dan Rollo.
 * clarified module attribute description in contrib/distributed (CC-390). Patch by Dan Rollo.
+* Allow configuration of BuildAgents to use a specific URL to find Lookup services (instead of using mulitcast discovery) (CC-392). Patch by Kirill Petrov. 
 
 release.xml:
 ----------------------
